--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
- {
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "https://github.com/novatorem/novatorem"
+{
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
     }
-  ]
+  }
 }
